solving last layout issues

--- a/Ex-2/style.css
+++ b/Ex-2/style.css
@@ -14,12 +14,17 @@ h1, h2, h3, h4, h5, h6, p {
 /* variables */
 :root {
 	--spacing: 33px;
+	--pad-top: 44px;
 }
 
 .container {
 	flex-direction: column;
 	height: 100%;
-	justify-content: space-;
+}
+
+.child-1 p {
+	padding-left: var(--spacing);
+	padding-top: var(--pad-top); 
 }
 
 .child-1 {
@@ -34,26 +39,52 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .child-3 {
-	width: 100%;
+	width: 77%;
+	margin-right: var(--spacing);
 }
 
 .yellow-red-container {
-	height: 70%; 
+	height: 66%;
+}
+
+.red-container, .yellow-container {
+	flex-direction: column;
+	width: 50%;
 }
 
 .yellow-container {
 	background-color: #ffffba; 
-	width: 50%;
+	margin-right: var(--spacing);	
+}
+
+.yellow-container p {
+	padding-left: var(--spacing);
+	padding-top: var(--pad-top); 
 }
 
 .red-container {
 	background-color: #ffb3ba;
-	width: 50%;
+}
+
+.red-container p {
+	padding-left: var(--spacing);
+	padding-top: var(--pad-top); 	
+}
+
+.box-vertical-center {
+	flex: 1 0 auto;
+	align-items: center;
 }
 
 .w-box {
-	width: 50%;
+	width: calc(50% - 2 * 11px);
 	background: white;
+	margin: 11px;	
+}
+
+.orange-container p {
+	padding-left: var(--spacing);
+	padding-top: var(--pad-top); 	
 }
 
 .orange-container {
@@ -61,13 +92,28 @@ h1, h2, h3, h4, h5, h6, p {
 	height: 30%;
 }
 
+.blue-container p {
+	padding-left: var(--spacing);
+	padding-top: var(--pad-top); 	
+}
+
 .blue-container {
 	background-color: #bae1ff;
+	width: 34%;
+}
+
+.box-wrapper {
+	width: 50%;
+	height: 222px;
 }
 
 /* helper classes */
-
 .d-flex { display: flex; }
-.wrap {	flex-wrap: wrap; }
+.flex-direction-column { flex-direction: column; }
+.justify-content-center { justify-content: center; }
+.d-inline-flex { display: inline-flex; }
+.f-wrap { flex-wrap: wrap; }
+.text-center { text-align: center; }
+	
 
 
